# bookmark-mgr

./: .gitignore  check_runner.py  conftest.py  manual_test.csv  perf_check.py  perf_tags.db  perf_test_tags.py  pyproject.toml  reproduce_bug.py  test_cli_empty_arg.py
.devcontainer/: devcontainer.json
.github/agents/: copilot-instructions.md  review-python.agent.md  skrunner.review.agent.md
.skrunner/: config.yaml
.skrunner/status/: S00.json  S01.json
docs/: implementation-plan.md
specs/001-add-delete-commands/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-csv-import-export/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-json-import-export/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-list-search/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-project-scaffold/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-data-model-storage/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-list-search-commands/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-tag-management/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/bookmarkcli/: __init__.py  cli.py  csv_io.py  formatter.py  formatting.py  jsonport.py  models.py  store.py
tests/: __init__.py  test_cli.py  test_csv_io.py  test_formatter.py  test_formatting.py  test_jsonport.py  test_store.py
tmp_test_bug/: db.sqlite
(+26 files in other folders)
