[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bookmarkcli"
version = "0.1.0"
description = "A CLI bookmark manager"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
]

[project.scripts]
bookmarkcli = "bookmarkcli.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "aiosqlite>=0.20",
]

[tool.hatch.build.targets.wheel]
packages = ["src/bookmarkcli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
